--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       }
 
       input:focus {
-        border-color: blue;
+        border-color: black;
         outline: none;
       }
     </style>
